samples/_failures_safe/1761443844_927227_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e417bf5e.c: In function ‘main’:
./samples/SAFE/__tmp_e417bf5e.c:138:5: error: expected expression at end of input
  138 |     for (int i = 0; i < entry_count; i++)
      |     ^~~
./samples/SAFE/__tmp_e417bf5e.c:138:5: error: expected declaration or statement at end of input
